--- a/index.html
+++ b/index.html
@@ -1,1 +1,149 @@
 
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Formação Digital 360º — do zero ao profissional</title>
+  <meta name="description" content="Aprenda marketing digital do zero com uma formação completa com 20 cursos práticos. Acesso imediato.">
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, Helvetica, sans-serif;
+      background: #0e0e0e;
+      color: #ffffff;
+      line-height: 1.6;
+    }
+    .container {
+      max-width: 900px;
+      margin: auto;
+      padding: 30px 20px;
+    }
+    h1, h2, h3 {
+      color: #f5c542;
+    }
+    .hero {
+      text-align: center;
+      padding: 60px 20px;
+    }
+    .hero p {
+      font-size: 18px;
+    }
+    .btn {
+      display: inline-block;
+      margin-top: 25px;
+      padding: 15px 30px;
+      background: #f5c542;
+      color: #000;
+      font-weight: bold;
+      text-decoration: none;
+      border-radius: 6px;
+    }
+    .section {
+      margin-top: 60px;
+    }
+    ul {
+      padding-left: 20px;
+    }
+    li {
+      margin-bottom: 10px;
+    }
+    .price {
+      font-size: 36px;
+      font-weight: bold;
+      color: #f5c542;
+      text-align: center;
+    }
+    .footer {
+      margin-top: 80px;
+      font-size: 14px;
+      color: #aaaaaa;
+      text-align: center;
+    }
+  </style>
+</head>
+
+<body>
+
+  <div class="hero">
+    <h1>Formação Digital 360º</h1>
+    <h2>Do zero ao profissional no marketing digital</h2>
+    <p>Aprenda marketing digital na prática com uma formação completa, organizada e acessível.</p>
+    <a class="btn" href="COLE_AQUI_SEU_LINK_DA_KIWIFY" target="_blank">
+      QUERO ACESSAR AGORA
+    </a>
+  </div>
+
+  <div class="container">
+
+    <div class="section">
+      <h2>Para quem é essa formação?</h2>
+      <ul>
+        <li>Iniciantes no marketing digital</li>
+        <li>Afiliados e produtores digitais</li>
+        <li>Quem quer trabalhar com marketing online</li>
+        <li>Quem quer aprender habilidades digitais práticas</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>O que você vai aprender</h2>
+      <ul>
+        <li>Criação de cursos e infoprodutos</li>
+        <li>Design com Canva e Corel Draw</li>
+        <li>Páginas de vendas e copywriting</li>
+        <li>Tráfego pago (Facebook, Google e YouTube Ads)</li>
+        <li>Vídeo, automação e WhatsApp</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>20 Cursos Inclusos</h2>
+      <ul>
+        <li>Aprenda a Criar Curso Online</li>
+        <li>Como e Onde Hospedar Infoproduto</li>
+        <li>Como Criar Ebook de Sucesso</li>
+        <li>Dominando o Canva</li>
+        <li>Lucrando com Canva</li>
+        <li>Corel Draw Design Artista</li>
+        <li>Criativos que Vendem Mais</li>
+        <li>Páginas de Venda Profissional</li>
+        <li>Capa para YouTube e Blog</li>
+        <li>Edição de Vídeos Profissional</li>
+        <li>Google Ads</li>
+        <li>Facebook Ads</li>
+        <li>Facebook Ads para Afiliados</li>
+        <li>YouTube Ads</li>
+        <li>WhatsApp Business Poderoso</li>
+        <li>Post para Facebook Médicos</li>
+        <li>Copywriting Essencial</li>
+        <li>Inbound Marketing</li>
+        <li>Criação de Capas para Vídeos</li>
+        <li>Chatbot com ManyChat</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>Investimento</h2>
+      <p class="price">R$ 397</p>
+      <p style="text-align:center;">ou 12x de R$ 39,70</p>
+      <div style="text-align:center;">
+        <a class="btn" href="COLE_AQUI_SEU_LINK_DA_KIWIFY" target="_blank">
+          GARANTIR MINHA VAGA
+        </a>
+      </div>
+    </div>
+
+    <div class="section">
+      <h2>Garantia</h2>
+      <p>Você tem 7 dias de garantia incondicional. Se não gostar, devolvemos seu dinheiro.</p>
+    </div>
+
+    <div class="footer">
+      <p>Este site não garante ganhos financeiros. Os resultados dependem exclusivamente do aluno.</p>
+    </div>
+
+  </div>
+
+</body>
+</html>
