--- a/index.html
+++ b/index.html
@@ -1,3 +1,139 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Formação Digital 360º</title>
+
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, Helvetica, sans-serif;
+      background: #0f172a;
+      color: #fff;
+    }
+
+    header {
+      padding: 40px 20px;
+      text-align: center;
+      background: linear-gradient(135deg, #1e3a8a, #0f172a);
+    }
+
+    header h1 {
+      font-size: 2rem;
+      margin-bottom: 10px;
+    }
+
+    header p {
+      font-size: 1.1rem;
+      color: #cbd5f5;
+    }
+
+    .cta {
+      display: inline-block;
+      margin-top: 20px;
+      padding: 15px 30px;
+      background: #22c55e;
+      color: #000;
+      text-decoration: none;
+      font-weight: bold;
+      border-radius: 8px;
+    }
+
+    section {
+      padding: 40px 20px;
+      max-width: 1200px;
+      margin: auto;
+    }
+
+    h2 {
+      text-align: center;
+      margin-bottom: 30px;
+      font-size: 1.8rem;
+    }
+
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 20px;
+    }
+
+    .curso {
+      background: #020617;
+      border-radius: 12px;
+      overflow: hidden;
+      text-align: center;
+      transition: transform .2s;
+    }
+
+    .curso:hover {
+      transform: scale(1.03);
+    }
+
+    .curso img {
+      width: 100%;
+      height: 140px;
+      object-fit: cover;
+    }
+
+    .curso h3 {
+      padding: 15px;
+      font-size: 1rem;
+    }
+
+    footer {
+      text-align: center;
+      padding: 30px;
+      font-size: .9rem;
+      color: #94a3b8;
+    }
+  </style>
+</head>
+
+<body>
+
+<header>
+  <h1>Formação Digital 360º</h1>
+  <p>Domine o Marketing Digital do Zero com 20 Cursos em 1</p>
+  <a href="https://pay.kiwify.com.br/jQ7ZsXT" class="cta">QUERO ACESSO AGORA</a>
+</header>
+
+<section>
+  <h2>O que você vai aprender</h2>
+
+  <div class="grid">
+
+    <div class="curso">
+      <img src="LINK-DA-IMAGEM-KIWIFY-AQUI">
+      <h3>Dominando o Canva</h3>
+    </div>
+
+    <div class="curso">
+      <img src="LINK-DA-IMAGEM-KIWIFY-AQUI">
+      <h3>Google Ads</h3>
+    </div>
+
+    <div class="curso">
+      <img src="LINK-DA-IMAGEM-KIWIFY-AQUI">
+      <h3>Facebook Ads</h3>
+    </div>
+
+    <div class="curso">
+      <img src="LINK-DA-IMAGEM-KIWIFY-AQUI">
+      <h3>Copywriting Essencial</h3>
+    </div>
+
+    <!-- Repita até os 20 cursos -->
+
+  </div>
+</section>
+
+<footer>
+  © 2026 • Formação Digital 360º — Todos os direitos reservados
+</footer>
+
+</body>
+</html>
 
 <!DOCTYPE html>
 <html lang="pt-br">
