--- a/index.html
+++ b/index.html
@@ -1,32 +1,72 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Formação Digital 360º</title>
-
   <style>
     body {
       margin: 0;
       font-family: Arial, Helvetica, sans-serif;
       background: #0f172a;
-      color: #fff;
+      color: #ffffff;
     }
-
-    header {
-      padding: 40px 20px;
+    .container {
+      max-width: 1100px;
+      margin: auto;
+      padding: 20px;
+    }
+    h1 {
       text-align: center;
-      background: linear-gradient(135deg, #1e3a8a, #0f172a);
-    }
-
-    header h1 {
-      font-size: 2rem;
+      font-size: 2.2rem;
       margin-bottom: 10px;
     }
-
-    header p {
-      font-size: 1.1rem;
+    .subtitle {
+      text-align: center;
       color: #cbd5f5;
+      margin-bottom: 30px;
+    }
+    .courses {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+      gap: 15px;
+    }
+    .course {
+      background: #1e293b;
+      padding: 15px;
+      border-radius: 10px;
+      font-size: 0.95rem;
+    }
+    .cta {
+      text-align: center;
+      margin: 40px 0;
+    }
+    .cta a {
+      background: #22c55e;
+      color: #000;
+      padding: 16px 30px;
+      text-decoration: none;
+      font-weight: bold;
+      border-radius: 8px;
+      font-size: 1.1rem;
+    }
+    footer {
+      text-align: center;
+      font-size: 0.8rem;
+      color: #94a3b8;
+      margin-top: 40px;
+    }
+  </style>
+</head>
+<body>
+
+  <div class="container">
+    <h1>Formação Digital 360º</h1>
+    <p class="subtitle">Do zero ao profissional no marketing digital</p>
+
+    <div class="courses">
+      <div class="course">Aprenda a Criar Curso On Line</div>
+
     }
 
     .cta {
